--- a/index.html
+++ b/index.html
@@ -141,7 +141,21 @@
                 <button type="button" class="w-full bg-white text-black font-black py-4 rounded-xl hover:bg-orange-500 hover:text-white transition-all uppercase tracking-widest text-xs">Confirm Participation</button>
             </form>
         </div>
-        <div class="p-8 bg-[#0a0a0a] rounded-3xl border border-white/5 text-center">
+  <a href="https://www.google.com/maps/search/Silver+Oak+University+Ahmedabad+Gujarat" 
+   target="_blank" 
+   class="p-8 bg-[#0a0a0a] rounded-3xl border border-white/5 text-center group block hover:border-orange-500/50 transition-all duration-500">
+    <div class="relative inline-block mb-6">
+        <div class="absolute inset-0 bg-orange-600/20 rounded-full blur-xl animate-pulse group-hover:bg-orange-600/40"></div>
+        <i class="fa-solid fa-location-dot text-4xl text-orange-600 relative z-10 group-hover:scale-110 transition-transform"></i>
+    </div>
+    <h4 class="text-xl font-black text-white mb-2 uppercase group-hover:text-orange-500 transition-colors">Venue & Directions</h4>
+    <p class="text-slate-500 text-xs leading-relaxed uppercase tracking-widest mb-4">
+        Main Campus Grounds,<br> Silver Oak University,<br> Ahmedabad, Gujarat
+    </p>
+    <span class="text-[10px] font-bold text-orange-500 uppercase tracking-widest opacity-0 group-hover:opacity-100 transition-opacity">
+        Click for GPS Directions <i class="fa-solid fa-arrow-up-right-from-square ml-1"></i>
+    </span>
+</a>
             <i class="fa-solid fa-location-dot text-4xl text-orange-600 mb-6"></i>
             <h4 class="text-xl font-black text-white mb-2 uppercase">Venue Details</h4>
             <p class="text-slate-500 text-xs leading-relaxed uppercase tracking-widest">
@@ -156,4 +170,5 @@
 </footer>
 
 </body>
+
 </html>
