--- a/index.html
+++ b/index.html
@@ -180,19 +180,11 @@
     </div>
 </section>
 
-<footer class="py-16 border-t border-white/5 bg-[#010101]">
-    <div class="max-w-7xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-8">
-        <div class="text-xs font-bold text-slate-700 uppercase tracking-[0.5em]">
-            Urvish &copy; 2026 | Silver Oak University
-        </div>
-        <div class="flex gap-6 opacity-30 hover:opacity-100 transition-opacity">
-            <i class="fa-brands fa-instagram text-xl hover:text-orange-500 cursor-pointer"></i>
-            <i class="fa-brands fa-linkedin text-xl hover:text-orange-500 cursor-pointer"></i>
-            <i class="fa-brands fa-x-twitter text-xl hover:text-orange-500 cursor-pointer"></i>
-        </div>
-    </div>
+<footer class="py-12 border-t border-white/5 bg-[#010101] text-center">
+    <p class="text-[10px] font-black uppercase tracking-[1em] text-slate-500">Urvish © 2026 | Silver Oak University</p>
 </footer>
 </body>
 
 </html>
+
 
