--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
 <body class="bg-[#030303] text-slate-300 font-sans selection:bg-orange-500/30 overflow-x-hidden">
 
 <nav class="fixed top-0 w-full z-50 glass-nav border-b border-white/5">
-    <div class="max-w-7xl mx-auto p-5 md:p-6 flex justify-between items-center">
+    <div class="max-w-7xl mx-auto p-4 md:p-6 flex flex-col md:flex-row justify-between items-center gap-4">
         <div class="text-xl font-black italic tracking-tighter">
             KALPVRUKSH <span class="text-orange-500 italic">2.0</span>
         </div>
-        <div class="hidden md:flex gap-8 text-[10px] font-black uppercase tracking-[0.3em] text-slate-500">
+        
+        <div class="flex gap-4 md:gap-8 text-[9px] md:text-[10px] font-black uppercase tracking-widest text-slate-500">
             <a href="#about" class="hover:text-white transition-all">About</a>
             <a href="#schedule" class="hover:text-white transition-all">Schedule</a>
             <a href="#register" class="text-white border-b border-orange-500 pb-1">Register Now</a>
@@ -186,5 +187,6 @@
 </body>
 
 </html>
+
 
 
